--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -2,7 +2,7 @@ nav .headerList {
     list-style-type: none;
     display: flex;
     justify-content: center;
-    padding: 10px
+    padding: 10px 40px;
 }
 
 nav .headerList li {
@@ -13,9 +13,10 @@ nav .headerList li {
 }
 
 nav .headerList li:first-child {
-    font-size: 26px;
+    font-size: 20px;
 }
 
 nav .headerList li:hover {
-    background-color:rgb(242, 242, 242)
+    background-color:var(--hover-background);
 }
+
