with that update Home Page is fixed. blur effect while pressing the Menu button. also added photos of different models, scrolling down snaps to the next photo under the video section

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -20,3 +20,9 @@ nav .headerList li:hover {
     background-color:var(--hover-background);
 }
 
+nav {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100vw;
+}
