--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,27 @@
 :root {
     --hover-background: rgba(179, 179, 179, 0.2);
+  }
+  
+  body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    overflow-x: hidden;
+    color: white;
+    overflow-y: auto;
+  }
+
+.container {
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
+    height: 100vh;
+    overflow-x: hidden;
 }
 
-body {
-    margin: 0;
-    overflow-x: hidden;
-    overflow-y: auto;
-    color: white;
+.section {
+    height: 100vh;
+    scroll-snap-align: start;
 }
