--- a/src/components/ImageBackgroundSection/ImageBackgroundSection.css
+++ b/src/components/ImageBackgroundSection/ImageBackgroundSection.css
@@ -21,6 +21,35 @@
     z-index: 1;
 }
 
+.bottom-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .bottom-section  button {
     margin: 0px 20px;
+}
+
+.feature-items {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    list-style-type: none;
+    text-align: center;
+    padding: 0px;
+}
+
+.feature-items li {
+    padding: 0px 10px;
+    margin: 0px 15px;
+}
+
+.feature-items h6 {
+    font-size: 20px;
+    margin: 0px;
+}
+
+.feature-items p {
+    font-size: 14px;
 }
